# telemetry-early-warning-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.bat  run.py
.github/workflows/: ci.yml
docs/: mathematical_model.docx
legacy/: chunked_stpa_pytorch.py  dask_stpa5000_pytorch.py  dask_stpa_pytorch.py  dask_stpa_pytorch_incremental.py  downtime_analysis.py  filter_fill_nan_stpa.py  inspect_stpa_dates.py  kfold_pca_smote_pytorch.py  main_stpa5000_stochastic_optimizer.py  main_stpa_stochastic_optimizer.py  merge_opers_stpa_by_date.py  numpy_memmap_stpa_pytorch.py  pandas_stpa_metrics.py  seasonality_analysis.py  small_dataset_emerg2023_pytorch.py
projects/: __init__.py
projects/gazprom_emergency/: __init__.py  __main__.py  baselines.py  config.py  config.yaml  contracts.py  data.py  dataset.py  features.py  mlflow_tracker.py  model.py  optimizers.py  pipeline.py  predict.py  requirements.txt  threshold.py  train.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_config.py  test_contracts.py  test_data.py  test_dataset.py  test_feature_columns.py  test_ml_practices.py  test_model.py  test_predict.py  test_utils.py
