[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazprom-emergency"
version = "0.1.0"
description = "Прогнозирование аварий на объектах газоснабжения по телеметрии"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gazprom ML Team" }]
keywords = ["ml", "pytorch", "telemetry", "emergency-prediction", "gazprom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
gazprom-emergency = "projects.gazprom_emergency.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["projects*"]

# ============================================================
# Ruff — линтер и форматтер
# ============================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (форматтер справится)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert OK в тестах

# ============================================================
# pytest
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ============================================================
# mypy
# ============================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
